# rgb_matters

./: .gitignore  CMakeLists.txt  README.md  check_label_integrity.py  demo.py  gen_labels.py  gen_normals.py  package.xml  parrallel_gen_labels.py  pyproject.toml  train.py  vis_label.py
dev/: determine_four_dof_channels.ipynb  label_heatmap.ipynb  train.ipynb
rgb_matters/: constant.py
rgb_matters/data/: graspnet.py
rgb_matters/data/utils/: convert.py  depth_inpaint.py  gen_label.py  generate_anchor_matrix.py  vis_label.py
