[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rgb_matters"
version = "1.2.11"
description = "GraspNet API"
authors = [
  {name = "Hao-Shu Fang"},
  {name = "Chenxi Wang"},
  {name = "Minghao Gou", email = "gouminghao@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
urls = {Homepage = "https://graspnet.net"}

dependencies = [
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[tool.hatch.build.targets.wheel]
packages = ["rgb_matters"]
